# aspasia

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: consultancy_test.yaml  debater_test,yaml
notebooks/: eda.ipynb
src/aspasia/: _registry.py  agents.py  debate_protocols.py  human_interface.py  interactive_consultant.py  prompts.py  protocols.py  solvers.py  tasks.py  utils.py
src/aspasia/datasets/: __init__.py  quality.py
