[project]
name = "aspasia"
version = "0.1.0"
description = "Implementation and replication of AI debate papers using Inspect framework"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "inspect-ai>=0.3.117",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.5",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "ty>=0.0.1a18",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
preview = true
select = [
    "E",
    "F",
    "I",
    "UP"
]
extend-select = [
    "E501",
    "UP045"
]
ignore = [
    "E702"
]


