[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aspasia"]

[project]
name = "aspasia"
version = "0.1.0"
description = "Framework for AI debate based on Inspect AI framework"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "inspect-ai>=0.3.117",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.5",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "ty>=0.0.1a11",
]


[project.entry-points.inspect_ai]
evals = "aspasia._registry"


[tool.ruff]
fix = true
line-length = 88
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP"
]
extend-select = [
    "E501",
    "UP045"
]
ignore = [
    "E702"
]


[tool.ruff.lint.per-file-ignores]
"src/aspasia/prompts.py"= ["E501"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"



